Change theme color to Light Green

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -22,12 +22,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* Application theme */
 
   :root {
-    --dark-primary-color: #303F9F;
-    --default-primary-color: #3F51B5;
-    --light-primary-color: #C5CAE9;
+    --dark-primary-color: #689F38;
+    --default-primary-color: #8BC34A;
+    --light-primary-color: #DCEDC8;
     --text-primary-color: #ffffff; /*text/icons*/
-    --accent-color: #FF4081;
-    --primary-background-color: #c5cae9;
+    --accent-color: #FFAB40;
+    --primary-background-color: #DCEDC8;
     --primary-text-color: #212121;
     --secondary-text-color: #727272;
     --disabled-text-color: #bdbdbd;
