--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body unresolved class="fullbleed layout vertical">
-  <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
+    <iron-ajax auto url="data/items.json" last-response="{{items}}"></iron-ajax>
 
     <paper-drawer-panel id="paperDrawerPanel">
       <!-- Drawer Scroll Header Panel -->
@@ -68,7 +68,7 @@
 
             <section data-route="home">
               <paper-material elevation="1">
-                <my-list></my-list>
+                <my-list items="{{items}}"></my-list>
               </paper-material>
             </section>
 
