--- a/app/elements/my-list/my-list.html
+++ b/app/elements/my-list/my-list.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../../bower_components/paper-ripple/paper-ripple.html">
 <link rel="import" href="../../bower_components/marked-element/marked-element.html">
 <link rel="import" href="../../bower_components/time-element/time-ago.html">
 
